crates/wlang/src/snapshots/wlang__parser__tests__workout_exercise_start_ambigious.snap
---
source: crates/wlang/src/parser.rs
description: "# Squat"
---
Workout
  SetGroup
    Exercise
      '#'
      Space(1)
      'Squat'

