crates/wlang/src/snapshots/wlang__parser__tests__workout_invalid_rep.snap
---
source: crates/wlang/src/parser.rs
description: "#Bench Press\n225 xbench"
---
Workout
  SetGroup
    Exercise
      '#'
      'Bench Press'
    Nl(1)
    Set
      Weight
        '225'
        Space(1)
      Error
        'xbench'

