crates/wlang/src/snapshots/wlang__parser__tests__workout_long_duration-2.snap
---
source: crates/wlang/src/parser.rs
description: "#Planks\nbw 1:30:25"
---
Workout
  SetGroup
    Exercise
      '#'
      'Planks'
    Nl(1)
    Set
      Weight
        'bw'
        Space(1)
      LongDuration
        '1'
        ':'
        '30'
        ':'
        '25'

