crates/wlang/src/snapshots/wlang__parser__tests__workout_long_duration.snap
---
source: crates/wlang/src/parser.rs
description: "#Planks\nbw 1:30"
---
Workout
  SetGroup
    '#'
    'Planks'
    Nl(1)
    Set
      Weight
        'bw'
      Space(1)
      LongDuration
        '1'
        ':'
        '30'

