crates/wlang/src/snapshots/wlang__parser__tests__workout_multiple_sets.snap
---
source: crates/wlang/src/parser.rs
description: "\n# Bench Press\n225 x5\n245 x8"
---
Workout
  Nl(1)
  SetGroup
    Exercise
      '#'
      Space(1)
      'Bench Press'
    Nl(1)
    Set
      Weight
        '225'
        Space(1)
      Reps
        'x'
        '5'
    Nl(1)
    Set
      Weight
        '245'
        Space(1)
      Reps
        'x'
        '8'

