crates/wlang/src/snapshots/wlang__parser__tests__workout_reps_x_suffix_and_prefix.snap
---
source: crates/wlang/src/parser.rs
description: "#Bench Press\n225 x5"
---
Workout
  SetGroup
    '#'
    'Bench Press'
    Nl(1)
    Set
      Weight
        '225'
      Space(1)
      Reps
        'x'
        '5'

