crates/wlang/src/snapshots/wlang__parser__tests__workout_set_weight_and_quantity_any_order-3.snap
---
source: crates/wlang/src/parser.rs
description: "#Bench Press\n5x 225"
---
Workout
  SetGroup
    Exercise
      '#'
      'Bench Press'
    Nl(1)
    Set
      Reps
        '5'
        'x'
      Space(1)
      Weight
        '225'

