crates/wlang/src/snapshots/wlang__parser__tests__workout_set_weight_and_quantity_any_order-4.snap
---
source: crates/wlang/src/parser.rs
description: "#Bench Press\nbw 30s"
---
Workout
  SetGroup
    Exercise
      '#'
      'Bench Press'
    Nl(1)
    Set
      Weight
        'bw'
        Space(1)
      SimpleDuration
        '30'
        's'

